--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       font-size: 12px;
       ">
     <p>版权所有：gengdi.com</p>
-    <a href="https://gengdi.com">我的网站</p>
+    <a href="https://gengdi0625.github.io/re01/Untitled-1.html">我的网站</p>
   </div>
 </body>
 
